<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
  tools:context=".MainActivity"
  tools:layout_editor_absoluteX="-2dp"
  tools:layout_editor_absoluteY="0dp">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.HW1.AppBarOverlay"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:popupTheme="@style/Theme.HW1.PopupOverlay"
      app:title="@string/title" />

  </com.google.android.material.appbar.AppBarLayout>

  <TextView
    android:id="@+id/textView_total_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="20dp"
    android:text="@string/bill_total"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


  <EditText
    android:id="@+id/textView_total_text_input"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/enter_bill_total1"
    android:inputType="none|numberDecimal"
    android:text=""
    android:textColorHint="#78909C"
    android:textStyle="bold"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView_total_text"
    app:layout_constraintStart_toEndOf="@+id/textView_total_text"
    tools:ignore="LabelFor" />

  <RadioGroup
    android:id="@+id/Discount_button_group"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/textView_discount_text"
    app:layout_constraintTop_toBottomOf="@+id/textView_total_text">

    <RadioButton
      android:id="@+id/radioButton_10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/_10" />

    <RadioButton
      android:id="@+id/radioButton_15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/_15" />

    <RadioButton
      android:id="@+id/radioButton_20"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/_20" />

    <RadioButton
      android:id="@+id/radioButton_Custom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/custom" />

  </RadioGroup>

  <TextView
    android:id="@+id/textView_discount_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tip"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/Discount_button_group"
    app:layout_constraintEnd_toEndOf="@+id/textView_tip_text"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textView_total_text"
    app:layout_constraintTop_toBottomOf="@+id/textView_total_text"
    app:layout_constraintVertical_bias="0.806" />

  <TextView
    android:id="@+id/textView_tip_Text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:text="@string/tip1"
    android:textStyle="bold"

    app:layout_constraintBottom_toBottomOf="@+id/textView_tip_Amount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.046"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_discount_text"
    app:layout_constraintVertical_bias="0.0" />

  <TextView
    android:id="@+id/textView_total_text_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="176dp"
    android:text="@string/total"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.047"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_discount_text" />

  <TextView
    android:id="@+id/textView_total_text_number_variable"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/_0"

    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/textView_total_text_number"
    app:layout_constraintEnd_toEndOf="@+id/textView_tip_Amount"
    app:layout_constraintStart_toStartOf="@+id/textView_tip_Amount"
    app:layout_constraintTop_toTopOf="@+id/textView_total_text_number"
    app:layout_constraintVertical_bias="0.0" />

  <TextView
    android:id="@+id/textView_tip_Amount"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_marginTop="108dp"
    android:text="@string/_0_00"
    android:textColor="#4CAF50"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.323"
    app:layout_constraintStart_toStartOf="@+id/seekBar_custom_tip"
    app:layout_constraintTop_toBottomOf="@+id/textView_discount_text" />

  <SeekBar
    android:id="@+id/seekBar_custom_tip"
    android:layout_width="271dp"
    android:layout_height="16dp"
    android:max="50"
    android:progress="0"
    app:layout_constraintBottom_toTopOf="@+id/textView_tip_Amount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.642"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_discount_text"
    app:layout_constraintVertical_bias="0.597" />

  <TextView
    android:id="@+id/textView_tip_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginStart="16dp"

    android:text="@string/custom_tip"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/seekBar_custom_tip"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_discount_text"
    app:layout_constraintVertical_bias="1.0" />

  <Button
    android:id="@+id/button_clear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="52dp"
    android:text="@string/clear"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/Split_by_button_group" />

  <TextView
    android:id="@+id/textView_split_by"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/split_by"
    android:textStyle="bold"

    app:layout_constraintBottom_toBottomOf="@+id/Split_by_button_group"
    app:layout_constraintEnd_toEndOf="@+id/textView_total_text_number"
    app:layout_constraintHorizontal_bias="0.38"
    app:layout_constraintStart_toStartOf="@+id/textView_total_text_number"
    app:layout_constraintTop_toTopOf="@+id/Split_by_button_group" />

  <RadioGroup
    android:id="@+id/Split_by_button_group"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="16dp"
    android:orientation="horizontal"
    android:textSize="10pt"
    android:textColor="#ff0000"

    app:layout_constraintBottom_toTopOf="@+id/textView_total_split_output"
    app:layout_constraintEnd_toEndOf="@+id/Discount_button_group"
    app:layout_constraintStart_toStartOf="@+id/Discount_button_group"
    app:layout_constraintTop_toBottomOf="@+id/textView_total_text_number_variable">

    <RadioButton
      android:id="@+id/Split_by_button_group_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/one" />

    <RadioButton
      android:id="@+id/Split_by_button_group_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/two" />

    <RadioButton
      android:id="@+id/Split_by_button_group_3"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/three" />

    <RadioButton
      android:id="@+id/Split_by_button_group_4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:minHeight="48dp"
      android:text="@string/four" />

  </RadioGroup>

  <TextView
    android:id="@+id/textView_total_split_output"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#ff0000"
    android:text="@string/Split_output"
    android:textStyle="bold"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView_total_split_text"
    app:layout_constraintEnd_toEndOf="@+id/textView_total_text_number_variable"
    app:layout_constraintHorizontal_bias="0.234"
    app:layout_constraintStart_toStartOf="@+id/textView_total_text_number_variable" />

  <TextView
    android:id="@+id/textView_total_split_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/total_person"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/button_clear"
    app:layout_constraintEnd_toEndOf="@+id/textView_total_text_number"
    app:layout_constraintHorizontal_bias="0.137"
    app:layout_constraintStart_toStartOf="@+id/textView_total_text_number"
    app:layout_constraintTop_toBottomOf="@+id/textView_split_by" />

  <TextView
    android:id="@+id/textView_total_text_Percentage_variable_value"
    android:layout_width="wrap_content"
android:textColor="#C900EC"
    android:layout_height="wrap_content"
    android:layout_marginStart="11dp"
    android:text="@string/percentage_custom"
    app:layout_constraintBaseline_toBaselineOf="@+id/textView_tip_text"
    app:layout_constraintStart_toEndOf="@+id/seekBar_custom_tip" />
</androidx.constraintlayout.widget.ConstraintLayout>
